--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700"
     />
+    <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
+
+    <link rel="stylesheet" href="src/sass/main.scss" />
+    <script type="module" defer src="src/js/controller.js"></script>
+
     <title>forkify // Search over 1,000,000 recipes</title>
   </head>
   <body></body>
