style nav elements

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               </button>
             </li>
             <li class="nav__item">
-              <button class="nav__btn nav__btn--add-recipe">
+              <button class="nav__btn nav__btn--bookmarks">
                 <svg class="nav__icon">
                   <use href="src/img/icons.svg#icon-bookmark"></use>
                 </svg>
