style ingredients and directions recipes

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <h2 class="heading--2">Recipe ingredients</h2>
           <ul class="recipe__ingredient-list">
             <li class="recipe__ingredient">
-              <svg class="revipe__icon">
+              <svg class="recipe__icon">
                 <use href="/src/img/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__quantity">1000</div>
@@ -143,7 +143,7 @@
             </li>
 
             <li class="recipe__ingredient">
-              <svg class="revipe__icon">
+              <svg class="recipe__icon">
                 <use href="/src/img/icons.svg#icon-check"></use>
               </svg>
               <div class="recipe__quantity">0.5</div>
@@ -154,9 +154,9 @@
           </ul>
         </div>
 
-        <div class="recipe__descriptions">
+        <div class="recipe__directions">
           <h2 class="heading--2">How to cook it</h2>
-          <p class="recipe__descriptions-text">
+          <p class="recipe__directions-text">
             This recipe was carefully designed and tested by
             <span class="recipe__publisher">The Pioneer Woman</span>. Please
             check out directions at their website.
