--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
-
+        <!-- 
         <figure class="recipe__fig">
           <img src="src/img/test-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
@@ -163,7 +163,7 @@
           </p>
           <a
             href="http://thepioneerwoman.com/cooking/pasta-with-tomato-cream-sauce/"
-            class="btn--small recipe__info-buttons"
+            class="btn--small recipe__btn"
             target="_blank"
           >
             <span>Directions</span>
@@ -171,7 +171,7 @@
               <use href="/src/img/icons.svg#icon-arrow-right"></use>
             </svg>
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </body>
