--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
           </div>
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
+
+        <div class="spinner">
+          <svg>
+            <use href="/src/img/icons.svg#icon-loader"></use>
+          </svg>
+        </div>
+
         <!-- 
         <figure class="recipe__fig">
           <img src="src/img/test-1.jpg" alt="Tomato" class="recipe__img" />
