--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
           <p>Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
 
-        <div class="spinner">
+        <!-- <div class="spinner">
           <svg>
             <use href="/src/img/icons.svg#icon-loader"></use>
           </svg>
-        </div>
+        </div> -->
 
         <!-- 
         <figure class="recipe__fig">
