--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
         </nav>
       </header>
 
-      <div class="search-results"></div>
+      <div class="search-results">
+        <ul class="results">
+          <a href="#664c8f193e7aa067e94e897b">RECIPE 1</a>
+          <a href="#664c8f193e7aa067e94e8a12">RECIPE 2</a>
+        </ul>
+      </div>
       <div class="recipe">
         <div class="message">
           <div>
