--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
           </svg>
         </div> -->
 
-        <div class="error">
+        <!-- <div class="error">
           <div>
             <svg>
               <use href="/src/img/icons.svg#icon-alert-triangle"></use>
             </svg>
           </div>
           <p>No recipes found for your query. Please try again!</p>
-        </div>
+        </div> -->
 
         <!-- 
         <figure class="recipe__fig">
