--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <ul class="results">
           <!-- <a href="#664c8f193e7aa067e94e897b">RECIPE 1</a>
           <a href="#664c8f193e7aa067e94e8a12">RECIPE 2</a> -->
-          <li class="preview">
+          <!-- <li class="preview">
             <a
               href="#664c8f193e7aa067e94e897b"
               class="preview__link preview__link--active"
@@ -91,7 +91,7 @@
                 </div>
               </div>
             </a>
-          </li>
+          </li> -->
         </ul>
       </div>
       <div class="recipe">
