--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </ul>
 
         <div class="pagination">
-          <button class="btn--inline pagination__btn--prev">
+          <!-- <button class="btn--inline pagination__btn--prev">
             <svg class="search__icon">
               <use href="/src/img/icons.svg#icon-arrow-left"></use>
             </svg>
@@ -106,7 +106,7 @@
             <svg class="search__icon">
               <use href="/src/img/icons.svg#icon-arrow-right"></use>
             </svg>
-          </button>
+          </button> -->
         </div>
       </div>
 
