add copyright field

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
             </svg>
           </button> -->
         </div>
+
+        <p class="copyright">
+          &copy; Copyright by<a
+            target="_blank"
+            href="https://t.me/filonenkod"
+            class="telegram-link"
+            >Dmytro Filonenko.</a
+          >
+        </p>
       </div>
 
       <div class="recipe">
