--- a/index.html
+++ b/index.html
@@ -62,6 +62,20 @@
                       No bookmarks yet. Find a nice recipe and bookmark it :)
                     </p>
                   </div>
+
+                  <li class="preview">
+                    <a href="#" class="preview__link">
+                      <figure class="preview__fig">
+                        <img src="/src/img/test-1.jpg" alt="Test" />
+                      </figure>
+                      <div class="preview__data">
+                        <h4 class="preview__title">
+                          Pasta with Tomato Cream ...
+                        </h4>
+                        <p class="preview__publisher">The Pioneer Woman</p>
+                      </div>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
