--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </p>
                   </div>
 
-                  <li class="preview">
+                  <!-- <li class="preview">
                     <a href="#" class="preview__link">
                       <figure class="preview__fig">
                         <img src="/src/img/test-1.jpg" alt="Test" />
@@ -75,7 +75,7 @@
                         <p class="preview__publisher">The Pioneer Woman</p>
                       </div>
                     </a>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </li>
